Исправляет схлопывание заголовка в IE11

--- a/source/sass/footer.scss
+++ b/source/sass/footer.scss
@@ -315,6 +315,7 @@
 
   .footer__contacts h2 {
     @include full-width;
+    flex-basis: auto;
     box-sizing: border-box;
     padding-left: 20px;
     padding-bottom: 6px;
