--- a/source/sass/advantages.scss
+++ b/source/sass/advantages.scss
@@ -215,19 +215,20 @@
 
     &--quality div svg {
       height: 69px;
-      margin-top: 2px;
+      margin-top: 0;
+      margin-bottom: 0;
     }
 
     &--settings div svg {
       width: 72px;
       height: 71px;
-      margin-top: 2px;
+      margin-top: -2px;
     }
 
 
-    // &--selected {
-    //   display: block;
-    // }
+    &--deadlines div svg {
+      margin-bottom: 0;
+    }
   }
 
   .advantages__item div {
