--- a/source/sass/main-header.scss
+++ b/source/sass/main-header.scss
@@ -58,7 +58,8 @@
 
   &:hover,
   &:focus {
-    color: $dark-color;
+    background-color: transparent;
+    box-shadow: 0px 2px 6.3px 0.7px rgba(0, 255, 216, 0.65), inset 0px 2px 6.3px 0.7px rgba(0, 255, 216, 0.65);
   }
 
   &--services {
@@ -68,7 +69,7 @@
 
     &:hover,
     &:focus {
-      opacity: 0.8;
+      background-color: $brand-color;
     }
   }
 }
