Возвращает дефолтное центрирование кнопок слайдеров

--- a/source/sass/swiper.scss
+++ b/source/sass/swiper.scss
@@ -147,9 +147,9 @@
     bottom: 11px;
   }
 
-  .partners .swiper-container-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
-    left: 49.5%;
-  }
+  // .partners .swiper-container-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
+  //   left: 49.5%;
+  // }
 
   // .partners .swiper-container-horizontal >
   .swiper-pagination-bullets .swiper-pagination-bullet {
@@ -162,9 +162,9 @@
     bottom: 6px;
   }
 
-  .partners .swiper-container-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
-    left: 46%;
-  }
+  // .partners .swiper-container-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
+  //   left: 46%;
+  // }
 
  .partners .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
     margin: 0px 2px;
