--- a/source/sass/services.scss
+++ b/source/sass/services.scss
@@ -41,12 +41,39 @@
 
 .services__item h3 {
   margin-bottom: 25px;
-
+  @media (min-width: $l-width) {
+    margin-left: -6px; // Если кнопка
+  }
   line-height: normal;
 }
 
 .services__item .button {
-  display: none;
+  // display: none;
+  padding-bottom: 0;
+  padding-top: 0;
+
+  font-weight: inherit;
+  text-align: left;
+  line-height: inherit;
+
+  border-color: transparent;
+  @media (min-width: $l-width) {
+    border: none;
+    cursor: default; // Подстраховка для неактивности
+    pointer-events: none; // Подстраховка для неактивности
+    &:hover,
+    &:focus {
+      border: none;
+      // border-color: transparent;
+      background-color: transparent;
+    }
+    &:disabled {
+      color: inherit;
+    }
+  }
+  &:active {
+    opacity: initial;
+  }
 }
 
 .services__sublist {
@@ -88,42 +115,46 @@
 
   .services__item h3 {
     display: flex;
-    align-items: center;
+    flex-grow: 1;
+    align-items: stretch;
 
     // height: 50px; //Для IE
-    min-height: 46px;
+    min-height: 50px;
     margin-bottom: auto;
     margin-top: 0;
+
+    line-height: 20px;
+
+  }
+
+  .services__item .button {
+    position: relative;
+    flex-grow: 1;
     padding-left: 21px;
     padding-top: 2px;
     padding-bottom: 0px;
     padding-right: 35px;
 
-    line-height: 20px;
-
     border: 1px solid #f4f4f4;
     background-color: #f4f4f4;
-  }
+    // position: absolute;
+    // right: 17px;
+    // top: 17px;
+    // z-index: 20;
 
-  .services__item .button {
-    position: absolute;
-    right: 17px;
-    top: 17px;
-    z-index: 20;
+    // padding: 0;
+    // background-color: transparent;
+    // border: none;
 
-    padding: 0;
-    background-color: transparent;
-    border: none;
-
-    display: block;
-    width: 16px;
-    height: 16px;
+    // display: block;
+    // width: 16px;
+    // height: 16px;
 
     &::before {
       content: "";
       position: absolute;
-      top: 6px;
-      right: 4px;
+      top: 44%;
+      right: 20px;
       // width: 10px;
       // height: 6px;
       border: 4px solid transparent;
@@ -140,8 +171,8 @@
       }
     }
 
-    &:hover + div h3,
-    &:focus  + div h3 {
+    &:hover,
+    &:focus {
       position: relative;
       z-index: 10;
 
@@ -170,7 +201,7 @@
 
     &--opened {
       @media (min-width: $m-width) {
-        h3 {
+        .button {
           background-color: #d7d7d7;
         }
       }
@@ -182,7 +213,7 @@
       }
     }
 
-    &:hover h3 {
+    &:hover .button {
       @media (min-width: $m-width) {
         background-color: #d7d7d7;
       }
@@ -195,11 +226,11 @@
     // display: table;
   }
 
-  .services__item h3 {
-    display: flex;
-    align-items: center;
-    flex-grow: 1;
-  }
+  // .services__item h3 {
+  //   display: flex;
+  //   align-items: center;
+  //   flex-grow: 1;
+  // }
 
   .services__sublist {
     display: none;
@@ -224,7 +255,7 @@
     // align-items: center;
     // flex-basis: 100%;
     box-sizing: border-box;
-    min-height: 46px;
+    min-height: 48px;
     padding-left: 21px;
     padding-right: 50px;
     @media (min-width: $m-width) {
@@ -302,9 +333,9 @@
     }
   }
 
-  .services__item .button {
-    right: 15px;
-  }
+  // .services__item .button {
+  //   right: 15px;
+  // }
 
   .services__sublist a {
     // min-height: 39px;
