Меняет принцип открытия  карточек услуг: на планшете открытая слева

--- a/source/sass/advantages.scss
+++ b/source/sass/advantages.scss
@@ -63,6 +63,9 @@
     justify-content: normal;
     margin: 0;
     color: $dark-color;
+    @media (min-width: $m-width) {
+      height: 345px;
+    }
   }
 
   .advantages__item {
