--- a/source/sass/services.scss
+++ b/source/sass/services.scss
@@ -192,7 +192,7 @@
       display: inline-block;
       // width: 94.5%;
       width: 47.4%;
-      flex-basis: 0;
+      flex-basis: auto;
       flex-grow: 0;
     }
     // display: block; // Так было в сданной версии
@@ -214,7 +214,8 @@
         }
       }
       & .services__sublist {
-        display: inline-block; //Чтобы не дробилось с колонки на колонку. КАк было в сданой версии
+        // display: inline-block; //Чтобы не дробилось с колонки на колонку. КАк было в сданой версии
+        display: block;
       }
       .button::before {
         border-top-color: $dark-color;
