Задает всем шрифтам бесконечный цикл подмены

--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -69,6 +69,7 @@
   font-family: "Raleway";
   font-style: normal;
   font-weight: 900;
+  font-display: swap;
   src: url("../fonts/raleway-cyrillic-900.woff") format("woff"),
     url("../fonts/raleway-cyrillic-900.woff2") format("woff2");
 }
@@ -78,6 +79,7 @@
   font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: url("../fonts/raleway-cyrillic-700.woff") format("woff"),
     url("../fonts/raleway-cyrillic-700.woff2") format("woff2");
 }
@@ -87,6 +89,7 @@
   font-family: "Circe";
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: url("../fonts/circe-regular.woff") format("woff"),
     url("../fonts/circe-regular.woff2") format("woff2");
 }
