--- a/source/sass/form.scss
+++ b/source/sass/form.scss
@@ -22,7 +22,7 @@
     width: 100%;
 
     // padding: 14px 18px 16px 0;
-    padding: 8px 0 2px;
+    padding: 6px 6px 4px;
     border: none;
     border-bottom: 1px solid rgba(225, 225, 225, .8);
     border-radius: 0;
@@ -189,7 +189,8 @@
       // line-height: 2.54;
       // letter-spacing: 0.56px;
       flex-grow: 1;
-      padding-top: 2px;
+      padding-top: 4px;
+      padding-bottom: 0;
     }
 
     & textarea {
